hphp/test/zend/bad/ext-standard-file/bug43248.php
<?php
echo realpath(dirname(__FILE__) . '/../file/');
?>